fixing padding around top of jump to top chevron

--- a/Did/Did/app/css/clientPage.css
+++ b/Did/Did/app/css/clientPage.css
@@ -85,6 +85,7 @@
 .podTitle {font-weight:bold;
 	font-size:20px;
 	margin-bottom:20px;
+	margin-top:10px;
 	width:80%;
 }
 .information {border-bottom:#cecece solid 1px;
@@ -128,7 +129,7 @@ vertical-align: top;
 width: 10px;
 color: #000;
 right: 40px;
-top: 50px;
+top: 40px;
 }
 
 @media only screen and (max-width : 1024px) {
